# NESEmu

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NESEmu.sln  README.md
NESEmu/: CMakeLists.txt  CPU.cpp  CPU.h  Logger.cpp  Mapper.h  Memory.cpp  Memory.h  NESEmu.vcxproj  NESEmu.vcxproj.filters  PPU.h  ROM.cpp  ROM.h  imgui.ini  main.cpp  shader.frag  shader.vert
NESEmu/src/: CPU.cpp  CPU.h  Mapper.cpp  Memory.cpp  Memory.h  PPU.h  main.cpp
NESEmu/src/debug/: Logger.cpp  Logger.h
NESEmu/src/emulator/: Bus.cpp  Bus.h  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Controller.cpp  Controller.h  IMapper.h  Mapper.h  MapperFactory.cpp  MapperFactory.h  Memory.cpp  Memory.h  MirroringMode.h  NES.cpp  NES.h  PPU.cpp  PPU.h  Palette.cpp  Palette.h  PatternTable.cpp  PatternTable.h  ROM.cpp  ROM.h
NESEmu/src/emulator/mappers/: NROM.cpp  NROM.h
NESEmu/src/graphics/: CpuWindow.cpp  CpuWindow.h  Display.cpp  Display.h  Graphics.cpp  Graphics.h  IDrawable.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vec2.h  Window.h
NESEmu/src/graphics/windows/: CartridgeDebugWindow.cpp  CartridgeDebugWindow.h  CpuWindow.cpp  CpuWindow.h  DebugWindow.cpp  DebugWindow.h  DemoWindow.h  InputDebugWindow.cpp  InputDebugWindow.h  MemoryViewWindow.cpp  MemoryViewWindow.h  PPUDebugWindow.cpp  PPUDebugWindow.h
NESEmu/src/mappers/: Mapper0.cpp  Mapper0.h  NROM.cpp  NROM.h
NESEmu/src/util/: Input.cpp  Input.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
libraries/imgui/: LICENSE.txt
scripts/: logcompare.py
